fix: have window wrap later
This should retain the landscape mode for longer
before it switched to portrait mode

--- a/src/auth/ui/vue/serviceItemContent/baseServiceItemContent.css
+++ b/src/auth/ui/vue/serviceItemContent/baseServiceItemContent.css
@@ -7,7 +7,7 @@
 
     border-color: #0097fb;
 
-    width: 550px;
+    width: 520px;
 
     padding: 30px;
 }
